--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -47,4 +47,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://kit.fontawesome.com/dd4e887c07.js" crossorigin="anonymous"></script>
 </html>
