--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,7 @@
       name="akiiko"
       content="akiiko is a place for all your shopping bag needs! Akiiko Designed Organic Canvas Bag for your uniqueness."
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -48,4 +49,5 @@
     -->
   </body>
   <script src="https://kit.fontawesome.com/dd4e887c07.js" crossorigin="anonymous"></script>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </html>
