--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -49,4 +49,5 @@
     -->
   </body>
   <script src="https://kit.fontawesome.com/dd4e887c07.js" crossorigin="anonymous"></script>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </html>
