need to check mail

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,10 +13,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="akiiko"
-      content="akiiko is a place for all your shopping bag needs! Akiiko Designed Organic Canvas Bag for your uniqueness."
-    />
+    <meta 
+      name ="description" 
+      content="Buy natural fabric utility products online from our latest collection of eco-friendly utilitarian vegan. The Akiiko, offers you to buy fabric online utility products." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -40,7 +39,7 @@
       crossorigin="anonymous"
     />
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
-    <title>akiiko</title>
+    <title>Akiiko : Bags Doesn't Have To Be Hard. Read These 9 Tips </title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
