--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#000000" />
     <meta 
       name ="description" 
-      content="Buy natural fabric utility products online from our latest collection of eco-friendly utilitarian vegan. The Akiiko, offers you to buy fabric online utility products." />
+      content="Buy natural fabric utility products online from our latest collection of eco-friendly utilitarian vegan. The Akiiko, offers you to buy fabric online utility products." >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
