--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,7 +39,7 @@
       crossorigin="anonymous"
     />
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
-    <title>Akiiko : Bags Doesn't Have To Be Hard. Read These 9 Tips </title>
+    <title>akiiko: Shop natural Home Decor & Utility products online</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
