--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,7 +39,7 @@
       crossorigin="anonymous"
     />
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
-    <title>akiiko: Shop natural Home Decor & Utility products online</title>
+    <title>akiiko: Shop Natural Home Decor & Utility Products Online</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
