meta tags keywords added

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,21 @@
     <meta 
       name ="description" 
       content="Buy natural fabric utility products online from our latest collection of eco-friendly utilitarian vegan. The Akiiko, offers you to buy fabric online utility products." >
+    <meta name = "keywords" 
+      content="eco-friendly fabric eco friendly products 
+      eco friendly products website eco friendly products online friendly products in india eco friendly products in chennai 
+      kitchen utility products kitchen products kitchen products store kitchen products near me kitchen products in chennai
+      kitchen products in indiakitchen products home bags for men bags for women bags for travelling gym bags for men
+      travel bags for menbags for girls bags for sale duffel bags for men bags for men fashion gifts for boyfriend
+      gifts for husband gifts for husband and wife gifts for dad gifts for dads birthday gifts for dad birthday homemade from daughter
+      gifts for girlfriend gifts for girlfriend birthday unique valentines days gifts for girlfriend valentines days gifts for boy friend
+      naturalizer bags for women no animal skin no animal skin minecraft no plastic bags non plastic kitchen storage containers
+      storage containers kitchen storage containers kitchen pantry i need some kitchen storage solutions natural vegetation
+      natural vegan accessories for men accessories for men fashion storage pouches with zipper storage pouches mens fashion
+      womens fashion fashion products home fashion products fashion products near me fashion products in chennai fashion products store in chennai
+      fashion products online fashion products online shop table wares table wares and dinner wares fabric mask fabric masks for sale
+      fabric masks near me fabric masks for men fabric masks for women fashion chennai fabric store fabric stores near me fabric store in chennaifabric store in india"
+    >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
