--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,6 +41,17 @@
     />
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <title>akiiko: Shop Natural Home Decor | Utility Products</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-204226128-1">
+      </script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-204226128-1');
+      </script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
