added google tag

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -84,7 +84,8 @@
               'send_to': 'AW-322846655/HA4zCMb5oucCEL__-JkB',
               'transaction_id': ''
           });
-        </script>  
+        </script>
+        <meta name="google-site-verification" content="f9JL3fgOMwsBfoNaKezKXThrdqzKNtA9-m4fG65ZiQM" />  
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
