adeed Google analytics link tracking

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google Tag Manager -->
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-5H7P95T');</script>
-    <!-- End Google Tag Manager -->
-  
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta 
       name ="description" 
-      content="Buy natural fabric utility products online from our latest collection of eco-friendly utilitarian vegan products. Akiiko, offers you to buy fabric online utility products." >
-    <meta name = "keywords" content="eco-friendly fabric eco friendly products eco friendly products website eco friendly products online friendly products in india eco friendly products in chennai kitchen utility products kitchen products kitchen products store kitchen products near me kitchen products in chennai kitchen products in indiakitchen products home bags for men bags for women bags for travelling gym bags for men travel bags for menbags for girls bags for sale duffel bags for men bags for men fashion gifts for boyfriend gifts for husband gifts for husband and wife gifts for dad gifts for dads birthday gifts for dad birthday homemade from daughter gifts for girlfriend gifts for girlfriend birthday unique valentines days gifts for girlfriend valentines days gifts for boy friend naturalizer bags for women no animal skin no animal skin no plastic bags non plastic kitchen storage containers storage containers kitchen storage containers i need some kitchen storage natural vegan natural vegan accessories for men accessories for men storage pouches with zipper storage pouches womens fashion fashion products home fashion products fashion products near me fashion products in chennai fashion products store in chennai shop table wares table wares and dinner wares fabric mask fabric masks for sale fabric masks near me fabric masks for men fabric masks for women">
+      content="Live a clutter-free lifestyle. Categorized as home decor, utility products, storage bags - this eco-freindly colllection of lifestyle products are available on akiiko's website. Shop now at akiiko." >
+    <meta name = "keywords" content="Lifestyle products Lifestyle products online Utility Essentials Home Decor products Skin Care products Travel Bags eco-freindly products">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -40,59 +32,10 @@
       crossorigin="anonymous"
     />
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
-    <title>akiiko: Shop Natural Home Decor | Utility Products</title>
-
-    <!-- Global site tag (gtag.js) - Google Analytics 
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-204226128-1">
-      </script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-204226128-1');
-      </script> -->
-    <!-- Global site tag (gtag.js) - Google Ads: 322846655 -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=AW-322846655"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'AW-322846655');
-      </script>
-    <!-- Event snippet for Purchase - Skin care - Sale - Aug 12 to Aug 21 conversion page
-      In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-      <script>
-        function gtag_report_conversion(url) {
-          var callback = function () {
-            if (typeof(url) != 'undefined') {
-              window.location = url;
-            }
-          };
-          gtag('event', 'conversion', {
-              'send_to': 'AW-322846655/HA4zCMb5oucCEL__-JkB',
-              'transaction_id': '',
-              'event_callback': callback
-          });
-          return false;
-        }
-        </script>
-      <!-- Event snippet for Purchase - Skin care - Sale - Aug 12 to Aug 21 conversion page -->
-        <script>
-          gtag('event', 'conversion', {
-              'send_to': 'AW-322846655/HA4zCMb5oucCEL__-JkB',
-              'transaction_id': ''
-          });
-        </script>
-        <meta name="google-site-verification" content="f9JL3fgOMwsBfoNaKezKXThrdqzKNtA9-m4fG65ZiQM" />  
+    <title>akiiko: Natural Home Decor and Lifestyle Products</title>
+    <meta name="google-site-verification" content="f9JL3fgOMwsBfoNaKezKXThrdqzKNtA9-m4fG65ZiQM" />  
   </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5H7P95T"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-  
+  <body>  
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
