--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,7 +33,17 @@
     />
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <title>akiiko: Natural Home Decor and Lifestyle Products</title>
-    <meta name="google-site-verification" content="f9JL3fgOMwsBfoNaKezKXThrdqzKNtA9-m4fG65ZiQM" />  
+    <meta name="google-site-verification" content="f9JL3fgOMwsBfoNaKezKXThrdqzKNtA9-m4fG65ZiQM" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-205864671-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-205864671-1');
+      </script>
   </head>
   <body>  
     <noscript>You need to enable JavaScript to run this app.</noscript>
