--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
       content="Live a clutter-free lifestyle. Categorized as home decor, utility products, storage bags - this eco-freindly colllection of lifestyle products are available on akiiko's website. Shop now at akiiko." >
     <meta name = "keywords" content="Lifestyle products Lifestyle products online Utility Essentials Home Decor products Skin Care products Travel Bags eco-freindly products">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="jph0phks55gbanlfurz4io62nxlcyq" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
