added google tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -70,6 +70,26 @@
         src="https://www.facebook.com/tr?id=4614722765214637&ev=PageView&noscript=1"/>
       </noscript>
   <!-- End Facebook Pixel Code -->
+
+  <!-- Global site tag (gtag.js) - Google Ads: 322846655 -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=AW-322846655"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'AW-322846655');
+      </script>
+
+  <!-- Event snippet for Purchase conversion page -->
+    <script>
+      gtag('event', 'conversion', {
+          'send_to': 'AW-322846655/rwSuCMaIge4CEL__-JkB',
+          'value': 1.0,
+          'currency': 'INR',
+          'transaction_id': ''
+      });
+    </script>
   </head>
   <body>  
     <noscript>You need to enable JavaScript to run this app.</noscript>
