added facebook trackers

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -80,6 +80,12 @@
 
         gtag('config', 'AW-322846655');
       </script>
+      <script>
+        fbq('track', 'Purchase');
+      </script>
+      <script>
+        fbq('track', 'Contact');
+      </script>
   </head>
   <body>  
     <noscript>You need to enable JavaScript to run this app.</noscript>
